apps/media/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: qui
