apps/media/qui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qui
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: wireguard-vpn-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: qui.sakul-flee.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qui
                port:
                  number: 80
  tls:
    - hosts:
        - qui.sakul-flee.de
      secretName: qui-sakul-flee-de-tls
